bad/incr_arr_elem_string.example_compiler_output
ERROR
[1mbad/incr_arr_elem_string.lat:4:20: [1;31merror: [0;1m++ operator is valid only for integer values not `string`[m
	(new string[3])[1]++;
	                  [1;32m^[m
